--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "bootstrap": "^5.3.3",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-icons-kit": "^2.0.0",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
